--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
+  flex-direction: column;
+  background: rgba(150, 255, 150, 0.671);
+  min-height: 100vh;
+  justify-content: space-between;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  padding-top: 25px;
+}
+
+.App-logo {
+  width: 242px;
+}
+
+.Menu-container {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.Menu-item {
+  position: relative;
+  color: whitesmoke;
+  background: black;
+  box-shadow: 1px 1px 1px grey;
+  border-radius: 25px;
+  border: 3px whitesmoke solid;
+  width: 125px;
+  height: 125px;
+  display: flex;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Menu-item h4 {
+  width: 100%;
+}
+
+.Menu-item h4:hover {
+  color: black;
+  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255), -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
+}
+
+.menu-title {
+  width: 100%;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menu-title:hover { 
+  top: 40%;
+}
+
+.menu-subtitle {
+  color: black;
+  width: 100%;
+  position: absolute;
+  padding: 0 15px;
+  top: 72%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menu-subtitle:hover {
+  z-index: 1;
+  color: whitesmoke;
+}
+
+.Menu-item h6 {
+  width: 100%;
+}
+
+.Menu-item img {
+  position: relative;
+  opacity: 9%;
+}
+
+.Menu-item:hover {
+  color: rgb(16, 18, 20);
+  box-shadow: 1px 1px 1px black;
+  background: white;
+  transition: .25s ease-in-out;
+}
+
+footer {
+  padding-top: 69px;
+  height: 100px;
+  font-weight: 300;
+  font-size: x-large;
+}
+
+#video-background {
+  position: fixed;
+  z-index: -1;
+  width: 100%;
 }
